feat: deprecate /admin/ endpoints
